Allow enums be non-packed

Repeated enum fields should not ignore the 'packed' protobuf attribute,
so if 'packed' is set to 'false', FieldFlag::NonPacked should land to
the message field attributes, indicating to serializer the expected
output format.

Fixes: QTBUG-138683
Pick-to: 6.8 6.9 6.10
Change-Id: I1c2d2bee32b42f60310307e1f3638ba2b3c236a3
Reviewed-by: Dennis Oberst <dennis.oberst@qt.io>