tests/auto/protobufgen/data/cmake_generated/qml_uri/qtprotobufgen.qpb.cpp
@@ -1124,7 +1124,8 @@ public:
           m_field11(other.m_field11),
           m_field12(other.m_field12),
           m_field13(other.m_field13),
-          m_field14(other.m_field14)
+          m_field14(other.m_field14),
+          m_field15(other.m_field15)
     {
     }
 
@@ -1142,22 +1143,23 @@ public:
     QtProtobuf::doubleList m_field12;
     QStringList m_field13;
     QByteArrayList m_field14;
+    QList<GlobalEnumGadget::GlobalEnum> m_field15;
 };
 
 ScalarRepeatedNoPackedTypes::~ScalarRepeatedNoPackedTypes() = default;
 
 static constexpr struct {
     QtProtobufPrivate::QProtobufPropertyOrdering::Data data;
-    const std::array<uint, 57> qt_protobuf_ScalarRepeatedNoPackedTypes_uint_data;
-    const char qt_protobuf_ScalarRepeatedNoPackedTypes_char_data[144];
+    const std::array<uint, 61> qt_protobuf_ScalarRepeatedNoPackedTypes_uint_data;
+    const char qt_protobuf_ScalarRepeatedNoPackedTypes_char_data[152];
 } qt_protobuf_ScalarRepeatedNoPackedTypes_metadata {
     // data
     {
         0, /* = version */
-        14, /* = num fields */
-        15, /* = field number offset */
-        29, /* = property index offset */
-        43, /* = field flags offset */
+        15, /* = num fields */
+        16, /* = field number offset */
+        31, /* = property index offset */
+        46, /* = field flags offset */
         39, /* = message full name length */
     },
     // uint_data
@@ -1177,7 +1179,8 @@ static constexpr struct {
         119, /* = field12 */
         127, /* = field13 */
         135, /* = field14 */
-        143, /* = end-of-string-marker */
+        143, /* = field15 */
+        151, /* = end-of-string-marker */
         // Field numbers:
         1, /* = field1 */
         2, /* = field2 */
@@ -1193,6 +1196,7 @@ static constexpr struct {
         12, /* = field12 */
         13, /* = field13 */
         14, /* = field14 */
+        15, /* = field15 */
         // Property indices:
         0, /* = field1 */
         1, /* = field2 */
@@ -1208,6 +1212,7 @@ static constexpr struct {
         11, /* = field12 */
         12, /* = field13 */
         13, /* = field14 */
+        14, /* = field15 */
         // Field flags:
         uint(QtProtobufPrivate::FieldFlag::NonPacked | QtProtobufPrivate::FieldFlag::Repeated), /* = field1 */
         uint(QtProtobufPrivate::FieldFlag::NonPacked | QtProtobufPrivate::FieldFlag::Repeated), /* = field2 */
@@ -1223,6 +1228,7 @@ static constexpr struct {
         uint(QtProtobufPrivate::FieldFlag::NonPacked | QtProtobufPrivate::FieldFlag::Repeated), /* = field12 */
         uint(QtProtobufPrivate::FieldFlag::Repeated), /* = field13 */
         uint(QtProtobufPrivate::FieldFlag::Repeated), /* = field14 */
+        uint(QtProtobufPrivate::FieldFlag::NonPacked | QtProtobufPrivate::FieldFlag::Repeated | QtProtobufPrivate::FieldFlag::Enum), /* = field15 */
     },
     // char_data
     /* metadata char_data: */
@@ -1230,7 +1236,7 @@ static constexpr struct {
     /* field char_data: */
     "field1\0field2\0field3\0field4\0field5\0"
     "field6\0field7\0field8\0field9\0field10\0"
-    "field11\0field12\0field13\0field14\0"
+    "field11\0field12\0field13\0field14\0field15\0"
 };
 
 const QtProtobufPrivate::QProtobufPropertyOrdering ScalarRepeatedNoPackedTypes::staticPropertyOrdering = {
@@ -1280,7 +1286,8 @@ bool comparesEqual(const ScalarRepeatedNoPackedTypes &lhs, const ScalarRepeatedN
         && lhs.dptr->m_field11 == rhs.dptr->m_field11
         && lhs.dptr->m_field12 == rhs.dptr->m_field12
         && lhs.dptr->m_field13 == rhs.dptr->m_field13
-        && lhs.dptr->m_field14 == rhs.dptr->m_field14;
+        && lhs.dptr->m_field14 == rhs.dptr->m_field14
+        && lhs.dptr->m_field15 == rhs.dptr->m_field15;
 }
 
 const QtProtobuf::int32List &ScalarRepeatedNoPackedTypes::field1() const &
@@ -1351,6 +1358,11 @@ const QStringList &ScalarRepeatedNoPackedTypes::field13() const &
 const QByteArrayList &ScalarRepeatedNoPackedTypes::field14() const &
 {
     return dptr->m_field14;
+}
+
+const QList<GlobalEnumGadget::GlobalEnum> &ScalarRepeatedNoPackedTypes::field15() const &
+{
+    return dptr->m_field15;
 }
 
 void ScalarRepeatedNoPackedTypes::setField1(const QtProtobuf::int32List &field1)
@@ -1574,6 +1586,22 @@ void ScalarRepeatedNoPackedTypes::setField14(QByteArrayList &&field14)
     if (dptr->m_field14 != field14) {
         dptr.detach();
         dptr->m_field14 = std::move(field14);
+    }
+}
+
+void ScalarRepeatedNoPackedTypes::setField15(const QList<GlobalEnumGadget::GlobalEnum> &field15)
+{
+    if (dptr->m_field15 != field15) {
+        dptr.detach();
+        dptr->m_field15 = field15;
+    }
+}
+
+void ScalarRepeatedNoPackedTypes::setField15(QList<GlobalEnumGadget::GlobalEnum> &&field15)
+{
+    if (dptr->m_field15 != field15) {
+        dptr.detach();
+        dptr->m_field15 = std::move(field15);
     }
 }
 
