tests/auto/protobufgen/data/cmake_generated/qml_uri/qtprotobufgen.qpb.h
@@ -468,6 +468,7 @@ class ScalarRepeatedNoPackedTypes : public QProtobufMessage
     Q_PROPERTY(QtProtobuf::doubleList field12 READ field12 WRITE setField12 SCRIPTABLE true)
     Q_PROPERTY(QStringList field13 READ field13 WRITE setField13 SCRIPTABLE true)
     Q_PROPERTY(QByteArrayList field14 READ field14 WRITE setField14 SCRIPTABLE true)
+    Q_PROPERTY(QList<qt::protobuf::GlobalEnumGadget::GlobalEnum> field15 READ field15 WRITE setField15 SCRIPTABLE true)
 
 public:
     using QtProtobufFieldEnum = ScalarRepeatedNoPackedTypes_QtProtobufNested::QtProtobufFieldEnum;
@@ -515,6 +516,8 @@ public:
     QPB_TST_QTPROTOBUFGEN_QML_URI_EXPORT const QStringList &field13() const &;
 
     QPB_TST_QTPROTOBUFGEN_QML_URI_EXPORT const QByteArrayList &field14() const &;
+
+    QPB_TST_QTPROTOBUFGEN_QML_URI_EXPORT const QList<GlobalEnumGadget::GlobalEnum> &field15() const &;
     QPB_TST_QTPROTOBUFGEN_QML_URI_EXPORT void setField1(const QtProtobuf::int32List &field1);
     QPB_TST_QTPROTOBUFGEN_QML_URI_EXPORT void setField1(QtProtobuf::int32List &&field1);
     QPB_TST_QTPROTOBUFGEN_QML_URI_EXPORT void setField2(const QtProtobuf::uint32List &field2);
@@ -543,6 +546,8 @@ public:
     QPB_TST_QTPROTOBUFGEN_QML_URI_EXPORT void setField13(QStringList &&field13);
     QPB_TST_QTPROTOBUFGEN_QML_URI_EXPORT void setField14(const QByteArrayList &field14);
     QPB_TST_QTPROTOBUFGEN_QML_URI_EXPORT void setField14(QByteArrayList &&field14);
+    QPB_TST_QTPROTOBUFGEN_QML_URI_EXPORT void setField15(const QList<GlobalEnumGadget::GlobalEnum> &field15);
+    QPB_TST_QTPROTOBUFGEN_QML_URI_EXPORT void setField15(QList<GlobalEnumGadget::GlobalEnum> &&field15);
     QPB_TST_QTPROTOBUFGEN_QML_URI_EXPORT static void registerTypes();
 
 private:
@@ -576,6 +581,7 @@ enum class QtProtobufFieldEnum {
     Field12ProtoFieldNumber = 12,
     Field13ProtoFieldNumber = 13,
     Field14ProtoFieldNumber = 14,
+    Field15ProtoFieldNumber = 15,
 };
 Q_ENUM_NS(QtProtobufFieldEnum)
 
