tests/auto/protobufgen/data/cmd_line_generated/extra_namespace/qtprotobufgen.qpb.h
@@ -455,6 +455,7 @@ class ScalarRepeatedNoPackedTypes : public QProtobufMessage
     Q_PROPERTY(QtProtobuf::doubleList field12 READ field12 WRITE setField12 SCRIPTABLE true)
     Q_PROPERTY(QStringList field13 READ field13 WRITE setField13 SCRIPTABLE true)
     Q_PROPERTY(QByteArrayList field14 READ field14 WRITE setField14 SCRIPTABLE true)
+    Q_PROPERTY(QList<MyTopLevelNamespace::qt::protobuf::GlobalEnumGadget::GlobalEnum> field15 READ field15 WRITE setField15 SCRIPTABLE true)
 
 public:
     using QtProtobufFieldEnum = ScalarRepeatedNoPackedTypes_QtProtobufNested::QtProtobufFieldEnum;
@@ -502,6 +503,8 @@ public:
     const QStringList &field13() const &;
 
     const QByteArrayList &field14() const &;
+
+    const QList<GlobalEnumGadget::GlobalEnum> &field15() const &;
     void setField1(const QtProtobuf::int32List &field1);
     void setField1(QtProtobuf::int32List &&field1);
     void setField2(const QtProtobuf::uint32List &field2);
@@ -530,6 +533,8 @@ public:
     void setField13(QStringList &&field13);
     void setField14(const QByteArrayList &field14);
     void setField14(QByteArrayList &&field14);
+    void setField15(const QList<GlobalEnumGadget::GlobalEnum> &field15);
+    void setField15(QList<GlobalEnumGadget::GlobalEnum> &&field15);
     static void registerTypes();
 
 private:
@@ -562,6 +567,7 @@ enum class QtProtobufFieldEnum {
     Field12ProtoFieldNumber = 12,
     Field13ProtoFieldNumber = 13,
     Field14ProtoFieldNumber = 14,
+    Field15ProtoFieldNumber = 15,
 };
 Q_ENUM_NS(QtProtobufFieldEnum)
 
